translation-tool/inputs/source_meta/objects/Common_QuickCase_Setting__mdt.object
<CustomObject>
    <description>This metadata is contains country specific processor classes for quick case create</description>
    <fields>
        <fullName>Console_Redirection_Page__c</fullName>
        <label>Console Redirection Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                    <label>Colombia</label>
                </value>
                <value>
                    <fullName>PA</fullName>
                    <label>Panama</label>
                </value>
                <value>
                    <fullName>CL</fullName>
                    <label>Chile</label>
                </value>
                <value>
                    <fullName>EC</fullName>
                    <label>Ecuador</label>
                </value>
                <value>
                    <fullName>PE</fullName>
                    <label>Peru</label>
                </value>
                <value>
                    <fullName>BR</fullName>
                    <default>true</default>
                    <label>Brazil</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Redirection_Page__c</fullName>
        <label>Portal Redirection Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor_Class__c</fullName>
        <label>Processor Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NAD</fullName>
                    <default>true</default>
                    <label>NAD</label>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Yahsat</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Common QuickCase Setting</label>
    <pluralLabel>Common QuickCase Settings</pluralLabel>
</CustomObject>